# src

./: .gitignore  .gitmodules  .lib  .shellcheckrc  .subtree.yaml  .task-sh-state.json  Makefile  README.md  assert.lib.sh  bcrypt.lib.sh  edit.lib.sh  embed  embed-script.lib.sh  embed.pl  embed.py  hie.yaml  ifsv.lib.sh  ip-utils.lib.sh  json2sh.lib.sh  lib  mise  mise.cmd  mise.sh  mise.toml  session-env.lib.sh  shim  subtree.lib.sh  task  task.cmd  task.sh  test-edit.lib.sh  test-embed-script.lib.sh  test-ifsv.lib.sh  test-json2sh.lib.sh  test-project.lib.sh  test-shell-features.lib.sh  test-time.lib.sh  test.lib.sh  test.sh  time.lib.sh  (+2 more)
.claude/: settings.json
.lib/: assert.lib.sh  commands.lib.sh  cui.bash  cui.lib.sh  embed-script.lib.sh  ifsv.lib.sh  ip-utils.bash  ip-utils.lib.sh  json2sh.lib.sh  session-env.lib.sh  sqlc-ts.bash  sqlc-ts.lib.sh  subtree.lib.sh  test-ifsv.lib.sh  test.lib.sh  time.lib.sh  tools.lib.sh  utils.bash  utils.lib.bash  utils.lib.sh
.lib-test/: test-bindump.lib.sh  test-edit.lib.sh  test-embed-script.lib.sh  test-ifsv.lib.sh  test-json2sh.lib.sh  test-project.lib.sh  test-shell-features.lib.sh  test-time.lib.sh
.mise/: config.toml  tasks-new.bash
applescript/: activate-browser-tab.applescript  insert-dateserial.applescript  insert-unique-id.applescript
c/: test.c
conf/: .task-sh-state.json  README.md  com.googlecode.iterm2.plist  karabiner.json  karabiner.yaml
go/: embedded-go.lib.sh  go-inlined.lib.sh  go.mod  go.sum  mise.toml  project.lib.sh  task-sh  task.cmd
hs/: README.md  hie.yaml  hsprj.cabal  mise.toml  package.yaml  stack.yaml
jq/: _test-dasel.lib.sh  _test-jq.lib.sh  _test-project.lib.sh  _test-yj.lib.sh  dasel.lib.sh  dasel3.lib.sh  json2sh.jq  project.lib.sh  task  yj.lib.sh
lib-sh/: test-shell-features.lib.sh
mise-tasks/: _route-tasks-bcrypt.lib.sh.toml  _route-tasks-bcrypt.sh.toml  build  (+33 more)
rs/: Cargo.toml  task
rs/tasks/: project.lib.sh  rs-wasm.lib.sh  rust.lib.sh
(+450 files in other folders)
